--- a/content/_data/figures.yaml
+++ b/content/_data/figures.yaml
@@ -1395,7 +1395,7 @@ figure_list:
     src: "figures/fig-30-3.jpg"
     zoom: true
     label: "Figure 30.3"
-    caption: "Examples of different methods of suspending a painting in a work stretcher while maintaining the tacking margins without flattening. (a) Painting in a standard stretcher with tacking margins preserved using bulldog clips. (b) Painting suspended in a new stretcher to allow access only to the lower edge of the painting; note the clamping and mending plates from the reverse. A stretcher can be assembled to "hug" the three unaffected sides—either clamped together or held with mending plates (see b). (c) Mock-up illustrating how to attach Hollytex and tape to suspend the painting in the stretcher."
+    caption: "Examples of different methods of suspending a painting in a work stretcher while maintaining the tacking margins without flattening. (a) Painting in a standard stretcher with tacking margins preserved using bulldog clips. (b) Painting suspended in a new stretcher to allow access only to the lower edge of the painting; note the clamping and mending plates from the reverse. A stretcher can be assembled to “hug” the three unaffected sides—either clamped together or held with mending plates (see b). (c) Mock-up illustrating how to attach Hollytex and tape to suspend the painting in the stretcher."
     credit: "Image: Robert Proctor"
 
   - id: "fig-30-4"
