--- a/content/_data/figures.yaml
+++ b/content/_data/figures.yaml
@@ -1549,7 +1549,7 @@ figure_list:
     src: "figures/fig-33-1.jpg"
     zoom: true
     label: "Figure 33.1"
-    caption: "Master of the St. Ursula Legend (German, active ca. 1485–1515), *The Martyrdom of St. Ursula and the 11,000 Virgins*, ca. 1492. Oil on canvas, 165 × 186.7 cm (65 × 73 1/2 in.). London, Victoria & Albert Museum, 5938-1857."
+    caption: "Master of the St. Ursula Legend (German, active ca. 1485–1515), *The Martyrdom of St. Ursula and the 11,000 Virgins*, ca. 1492. Oil on canvas, 163 × 232.4 cm (65 × 91 1/2 in.). London, Victoria & Albert Museum, 5938-1857."
     credit: "Image: Victoria & Albert Museum"
 
   - id: "fig-33-2"
@@ -1584,15 +1584,15 @@ figure_list:
     src: "figures/fig-33-6.jpg"
     zoom: true
     label: "Figure 33.6"
-    caption: "Ch’ol Muk Ri (North Korean), *Uri chungdae sosik*, 2005. Oil on cotton canvas, 81 × 77 × 2 cm (31 7/8 × 30 1/3 × 3/4 in.) on stretcher. The canvas painting is returned to plane through moisture treatments while on a loom. *Uri chungdae sosik*, 2005. Oil on cotton canvas, 81 × 77 × 2 cm (31 7/8 × 30 1/3 × 3/4 in.) (on stretcher). London, Victoria & Albert Museum, FE.89‑2009."
+    caption: "Ch’ol Muk Ri (North Korean), *Uri chungdae sosik*, 2005. Oil on cotton canvas, 81 × 77 cm (31 7/8 × 30 1/3 in.) on stretcher. The canvas painting is returned to plane through moisture treatments while on a loom. London, Victoria & Albert Museum, FE.89‑2009."
     credit: "Image: Victoria & Albert Museum / Photo: Nicola Costaras"
 
   - id: "fig-33-7"
     src: "figures/fig-33-7.jpg"
     zoom: true
     label: "Figure 33.7"
-    caption: "Clare Richardson and Susan Catcher strip lining *Landscape with Double Rainbow* by John Constable (1779–1837) using Japanese paper and wheatstarch paste. Paintings Conservation Studio, V&A, London. Oil on paper and canvas, 33.7 × 38.4 cm (13 1/4 × 15 1/8 in.). Victoria & Albert Museum, London, 328‑1888."
-    credit: "Image: Victoria & Albert Museum /. Photo: Nicola Costaras"
+    caption: "Clare Richardson and Susan Catcher strip-lining *Landscape with Double Rainbow* by John Constable (English, 1779–1837) using Japanese paper and wheat starch paste. Paintings Conservation Studio, V&A, London. Oil on paper and canvas, 33.7 × 38.4 cm (13 1/4 × 15 1/8 in.). Victoria & Albert Museum, London, 328‑1888."
+    credit: "Image: Victoria & Albert Museum / Photo: Nicola Costaras"
 
   - id: "fig-34-1-a"
     src: "figures/fig-34-1-a.jpg"
